--- a/src/app/file-manager/file-manager.component.scss
+++ b/src/app/file-manager/file-manager.component.scss
@@ -37,7 +37,7 @@
 }
 
 .fm-breadcrumb {
-  flex: 1 1 auto;
+  flex: 1 1 0;
   min-width: 0;
   overflow: hidden;
 }
